<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".TakeSurvey4Activity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#F4C538"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:progress="80"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_gravity="top"
        android:layout_marginTop="20pt"
        android:gravity="center"
        android:text="@string/howAreYou"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/verygood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/verygood"
        android:textColor="@color/colorOffWhite"

        />
    <Button
        android:id="@+id/good"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/good"
        android:textColor="@color/colorOffWhite"
        />
    <Button
        android:id="@+id/natural"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Natural"
        android:textColor="@color/colorOffWhite"
        />
    <Button
        android:id="@+id/bad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/bad"
        android:textColor="@color/colorOffWhite"
        />
    <Button
        android:id="@+id/verybad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/verybad"
        android:textColor="@color/colorOffWhite"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/prev"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/previousbutton"
            android:textColor="@color/colorOffWhite"
            android:text="Previous" />
        <Button
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="80pt"
            android:layout_marginRight="5dp"
            android:background="@drawable/previousbutton"
            android:textColor="@color/colorOffWhite"
            android:text="Next" />
    </LinearLayout>

</LinearLayout>